Fixed deprecated URL handling